--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>iSiteVQA</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+        <img src="/logo.png" width="100" alt="LOGO">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/position-avaliable.html">Positions Avaliable</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="jumbotron jumbotron-fluid bgimage">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10">
+            <h2 class="display-5">Remote Video Quality Auditor – Freelance/Contractor</h2>
+            <p class="lead">We are also looking for individuals in wheelchairs who have the required experience prior to having had an accident that forced them from the industry. This job is done from a chair.</p>
+            <p><a class="btn btn-primary btn-lg" href="/position-avaliable.html" role="button">Apply Now!</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer-classic context-dark bg-primary">
+    <div class="container">
+      <div class="row row-30">
+        <div class="col-md-4 col-xl-5">
+          <div class="pr-xl-4">
+            <a class="brand" href="index.html">
+              <h5>ISiteVQA</h5>
+            </a>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas laborum, quisquam architecto, ex delectus nam, recusandae ad maiores sequi labore ducimus quaerat corrupti officia possimus modi. Iste nisi modi temporibus?
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Info</h5>
+          <dl class="contact-list">
+            <dt>Work email:</dt>
+            <dd><a href="mailto:#">jobs@isitevqa.com</a></dd>
+            <dt>My email:</dt>
+            <dd><a href="mailto:#">steve@isitevqa.com</a></dd>
+          </dl>
+        </div>
+        <div class="col-md-4 col-xl-3">
+          <h5>Site Map</h5>
+          <ul class="nav-list">
+            <li><a href="/">Home Page</a></li>
+            <li><a href="/position-avaliable.html">Positions Avaliable</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script
+			  src="https://code.jquery.com/jquery-3.5.1.min.js"
+			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
+
+</html>
