--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="container ">
         <a class="navbar-brand" href="/">
-        <img src="/logo.png" width="100" alt="LOGO">
+        <img src="/logo.png" width="80" alt="LOGO">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse align-self-end justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/position-avaliable.html">Positions Avaliable</a>
+              <a class="nav-link" href="/position-avaliable.html">Jobs</a>
             </li>
           </ul>
         </div>
@@ -38,43 +38,32 @@
     <section class="jumbotron jumbotron-fluid bgimage">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10">
-            <h2 class="display-5">Remote Video Quality Auditor – Freelance/Contractor</h2>
-            <p class="lead">We are also looking for individuals in wheelchairs who have the required experience prior to having had an accident that forced them from the industry. This job is done from a chair.</p>
-            <p><a class="btn btn-primary btn-lg" href="/position-avaliable.html" role="button">Apply Now!</a></p>
+          <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10 mt-5">
+            <h2 class="display-5">Video Quality Audits for the World-Wide Telecommunications Industry</h2>
+            <p><a class="btn btn-primary btn-small" href="/position-avaliable.html" role="button">Apply Now!</a></p>
           </div>
         </div>
       </div>
     </section>
   </main>
-  <footer class="footer-classic context-dark bg-primary">
+  <footer class="footer-classic context-dark">
     <div class="container">
-      <div class="row row-30">
-        <div class="col-md-4 col-xl-5">
-          <div class="pr-xl-4">
-            <a class="brand" href="index.html">
-              <h5>ISiteVQA</h5>
-            </a>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas laborum, quisquam architecto, ex delectus nam, recusandae ad maiores sequi labore ducimus quaerat corrupti officia possimus modi. Iste nisi modi temporibus?
-            </p>
+      <div class="row">
+        <div class=" text-center col-md-12"> 
+          <h6 class="font-weight-bold">Contact Info</h6>
+          <div id="contact">
+            <p><span class="font-weight-bold">Work email: </span> <a href="mailto:#">jobs@isitevqa.com</a></p>
+            <p><span class="font-weight-bold">My email:</span> <a href="mailto:#">steve@isitevqa.com</a></p> 
           </div>
-        </div>
-        <div class="col-md-4">
-          <h5>Contact Info</h5>
-          <dl class="contact-list">
-            <dt>Work email:</dt>
-            <dd><a href="mailto:#">jobs@isitevqa.com</a></dd>
-            <dt>My email:</dt>
-            <dd><a href="mailto:#">steve@isitevqa.com</a></dd>
-          </dl>
-        </div>
-        <div class="col-md-4 col-xl-3">
-          <h5>Site Map</h5>
-          <ul class="nav-list">
-            <li><a href="/">Home Page</a></li>
-            <li><a href="/position-avaliable.html">Positions Avaliable</a></li>
-          </ul>
+          </div>
+      </div>
+    </div>
+  </footer>
+  <footer id="developer">
+    <div class="container">
+      <div class="row">
+        <div class="text-center col-md-12">
+          <p class="small p-0 m-0 font-weight-bold">Developed by <a href="saadiftikhar.com">saadiftikhar.com</a> </p>
         </div>
       </div>
     </div>
