--- a/position-avaliable.html
+++ b/position-avaliable.html
@@ -13,20 +13,22 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src="/logo.png" width="100" alt="LOGO"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="container ">
+        <a class="navbar-brand" href="/">
+        <img src="/logo.png" width="80" alt="LOGO">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse align-self-end justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link" href="/">Home</a>
-            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/position-avaliable.html">Positions Avaliable <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/position-avaliable.html">Jobs</a>
             </li>
           </ul>
         </div>
@@ -36,14 +38,14 @@
 
   <main class="container">
     <section class="row">
-      <h3>The Position: Remote Video Quality Auditor – Freelance/Contractor</h3>
+      <h3>The Position: <span class="font-weight-bold">Remote Video Quality Auditor</span> – Freelance/Contractor</h3>
       <div>
         <p>
           You do not need to be a technician; however you have to have EXTENSIVE knowledge and done at least 30 or more
           3 4 5 or 6 sector installs etc. plus Ground level installations, 4+ yrs. in the business. The more experience
           you have the better the chance of being hired. This is not a job for inexperienced telecom guys.
         </p>
-        <p class="font-weight-bold text-primary">
+        <p class="font-weight-bold" style="color: #3993e5">
           We are also looking for individuals in wheelchairs who have the required experience prior to having had an
           accident that forced them from the industry. This job is done from a chair.
         </p>
@@ -89,34 +91,24 @@
     </section>
   </main>
 
-  <footer class="footer-classic context-dark bg-primary">
+  <footer class="footer-classic context-dark">
     <div class="container">
-      <div class="row row-30">
-        <div class="col-md-4 col-xl-5">
-          <div class="pr-xl-4">
-            <a class="brand" href="index.html">
-              <h5>ISiteVQA</h5>
-            </a>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas laborum, quisquam architecto, ex delectus nam, recusandae ad maiores sequi labore ducimus quaerat corrupti officia possimus modi. Iste nisi modi temporibus?
-            </p>
+      <div class="row">
+        <div class=" text-center col-md-12"> 
+          <h6 class="font-weight-bold">Contact Info</h6>
+          <div id="contact">
+            <p><span class="font-weight-bold">Work email: </span> <a href="mailto:#">jobs@isitevqa.com</a></p>
+            <p><span class="font-weight-bold">My email:</span> <a href="mailto:#">steve@isitevqa.com</a></p> 
           </div>
-        </div>
-        <div class="col-md-4">
-          <h5>Contact Info</h5>
-          <dl class="contact-list">
-            <dt>Work email:</dt>
-            <dd><a href="mailto:#">jobs@isitevqa.com</a></dd>
-            <dt>My email:</dt>
-            <dd><a href="mailto:#">steve@isitevqa.com</a></dd>
-          </dl>
-        </div>
-        <div class="col-md-4 col-xl-3">
-          <h5>Site Map</h5>
-          <ul class="nav-list">
-            <li><a href="/">Home Page</a></li>
-            <li><a href="/position-avaliable.html">Positions Avaliable</a></li>
-          </ul>
+          </div>
+      </div>
+    </div>
+  </footer>
+  <footer id="developer">
+    <div class="container">
+      <div class="row">
+        <div class="text-center col-md-12">
+          <p class="small p-0 m-0 font-weight-bold">Developed by <a href="saadiftikhar.com">saadiftikhar.com</a> </p>
         </div>
       </div>
     </div>
