--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row">
         <div class="text-center col-md-12">
-          <p class="small p-0 m-0 font-weight-bold">Developed by <a href="saadiftikhar.com">saadiftikhar.com</a> </p>
+          <p class="small p-0 m-0 font-weight-bold">Developed by <a href="http://saadiftikhar.com">saadiftikhar.com</a> </p>
         </div>
       </div>
     </div>
