--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container ">
         <a class="navbar-brand" href="/">
-        <img src="/logo.png" width="80" alt="LOGO">
+        <img src="/logo.png" width="100" alt="LOGO">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse align-self-end justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse align-self-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/position-avaliable.html">Jobs</a>
+              <a class="nav-link" href="/position-avaliable.html">Positions avaliable </a>
             </li>
           </ul>
         </div>
@@ -38,9 +38,9 @@
     <section class="jumbotron jumbotron-fluid bgimage">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10 mt-5">
+          <div class="col-lg-7 col-md-8 col-sm-10 col-xs-10 mt-5">
             <h2 class="display-5">Video Quality Audits for the World-Wide Telecommunications Industry</h2>
-            <p><a class="btn btn-primary btn-small" href="/position-avaliable.html" role="button">Apply Now!</a></p>
+            <p><a class="btn btn-primary btn-small" href="/position-avaliable.html" role="button">Avaliable Positions</a></p>
           </div>
         </div>
       </div>
