--- a/position-avaliable.html
+++ b/position-avaliable.html
@@ -16,19 +16,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container ">
         <a class="navbar-brand" href="/">
-        <img src="/logo.png" width="80" alt="LOGO">
+        <img src="/logo.png" width="100" alt="LOGO">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse align-self-end justify-content-end" id="navbarNav">
+        <div class="collapse navbar-collapse align-self-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/position-avaliable.html">Jobs</a>
+              <a class="nav-link" href="/position-avaliable.html">Positions avaliable </a>
             </li>
           </ul>
         </div>
