--- a/position-avaliable.html
+++ b/position-avaliable.html
@@ -16,7 +16,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container ">
         <a class="navbar-brand" href="/">
-        <img src="/logo.png" width="100" alt="LOGO">
+          <img src="/logo.png" width="80" alt="LOGO">
+          <h5 class="text-center m-0 p-0">iSiteVQA</h5>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
